storage/xtradb/os/os0stacktrace.c
@@ -85,7 +85,7 @@ os_stacktrace_print(
 	caller_address = (void*) uc->uc_mcontext.gregs[REG_RIP] ;
 #elif defined(__hppa__)
 	ucontext_t* uc = (ucontext_t*) ucontext;
-	caller_address = (void*) uc->uc_mcontext.sc_iaoq[0] & ~0x3UL ;
+	caller_address = (void*) (uc->uc_mcontext.sc_iaoq[0] & ~0x3UL) ;
 #elif (defined (__ppc__)) || (defined (__powerpc__))
 	ucontext_t* uc = (ucontext_t*) ucontext;
 	caller_address = (void*) uc->uc_mcontext.regs->nip ;
